Add ContentRelations Content App

--- a/Our.Umbraco.ContentRelations.Site/appsettings.json
+++ b/Our.Umbraco.ContentRelations.Site/appsettings.json
@@ -1,10 +1,26 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "$schema": "https://json.schemastore.org/appsettings.json",
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Warning"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "umbracoDbDSN": "Data Source=|DataDirectory|\\Umbraco.sdf;Flush Interval=1;"
+  },
+  "Umbraco": {
+    "CMS": {
+      "Hosting": {
+        "Debug": false
+      },
+      "Global": {
+        "Id": "3c493ca7-589b-4956-9657-81a2e6e329cb"
+      }
+    }
+  }
 }
