--- a/Our.Umbraco.ContentRelations.Site/Properties/launchSettings.json
+++ b/Our.Umbraco.ContentRelations.Site/Properties/launchSettings.json
@@ -1,10 +1,11 @@
-﻿{
+{
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:32679",
-      "sslPort": 44348
+      "applicationUrl": "http://localhost:28976",
+      "sslPort": 44342
     }
   },
   "profiles": {
@@ -15,14 +16,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Our.Umbraco.ContentRelations.Site": {
+    "Umbraco.Web.UI.NetCore": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:44342;http://localhost:28976"
     }
   }
 }
