--- a/Our.Umbraco.ContentRelations.Site/appsettings.Development.json
+++ b/Our.Umbraco.ContentRelations.Site/appsettings.Development.json
@@ -1,9 +1,41 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "$schema": "https://json.schemastore.org/appsettings.json",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "Console"
+            }
+          ]
+        }
+      }
+    ]
+  },
+  "Umbraco": {
+    "CMS": {
+      "Content": {
+        "MacroErrors": "Throw"
+      },
+      "Global": {
+        "Smtp": {
+          "From": "your@email.here",
+          "Host": "localhost",
+          "Port": 25
+        }
+      },
+      "Hosting": {
+        "Debug": true
+      },
+      "RuntimeMinification": {
+        "useInMemoryCache": true,
+        "cacheBuster": "Timestamp"
+      }
     }
   }
 }
