--- a/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
+++ b/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include="App_Plugins\Our.Umbraco.ContentRelations\**\*.*">
+        <Content Include="App_Plugins\ContentRelations\**\*.*">
             <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
             <CopyToPublishDirectory>Always</CopyToPublishDirectory>
         </Content>
@@ -24,5 +24,9 @@
             <Pack>True</Pack>
             <PackagePath>build</PackagePath>
         </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="App_Plugins\ContentRelations\info.html" />
     </ItemGroup>
 </Project>
