--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
       
-    - name: publish on version change
+    - name: Publish on version change
       id: publish_nuget
       uses: rohith/publish-nuget@v2
       with:
