--- a/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
+++ b/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
@@ -34,6 +34,11 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="App_Plugins\ContentRelations\interceptor.js" />
+      <None Remove="App_Plugins\ContentRelations\views\delete.html" />
+    </ItemGroup>
+
     <!--<ItemGroup>
       <None Remove="App_Plugins\ContentRelations\content.relations.controller.js" />
       <None Remove="App_Plugins\ContentRelations\info.html" />
