--- a/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
+++ b/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
@@ -13,7 +13,7 @@
         <Description>...</Description>
         <Product>...</Product>
 
-        <PackageVersion>1.0.1-alpha</PackageVersion>
+        <PackageVersion>1.0.1-alpha01</PackageVersion>
 
         <PackageProjectUrl>https://github.com/erikjanwestendorp/Our.Umbraco.ContentRelations</PackageProjectUrl>
         <PackageTags>Umbraco Package ContentRelations</PackageTags>
