--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
           PROJECT_FILE_PATH: Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
           
           # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-          VERSION_STATIC: 1.0.0-alpha
+          VERSION_STATIC: 1.0.0-alpha01
           
           # API key to authenticate with NuGet server
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
