--- a/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
+++ b/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <ContentTargetFolders>.</ContentTargetFolders>
@@ -38,6 +38,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove="App_Plugins\ContentRelations\backoffice\settings.dashboard.html" />
       <None Remove="App_Plugins\ContentRelations\interceptor.js" />
       <None Remove="App_Plugins\ContentRelations\views\delete.html" />
     </ItemGroup>
