Get package information from projectfile

--- a/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
+++ b/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
@@ -15,7 +15,7 @@
         <Product>...</Product>
 
 		<PackageVersion>1.0.1-alpha02</PackageVersion>
-		<Version>1.0.1-alpha02</Version>
+		<Version>$(PackageVersion)</Version>
 
 	    <PackageProjectUrl>https://github.com/erikjanwestendorp/Our.Umbraco.ContentRelations</PackageProjectUrl>
         <PackageTags>Umbraco Package ContentRelations</PackageTags>
