--- a/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
+++ b/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
@@ -14,7 +14,7 @@
         <Description>...</Description>
         <Product>...</Product>
 
-		<PackageVersion>1.0.1-alpha03</PackageVersion>
+		<PackageVersion>1.0.1-beta01</PackageVersion>
 		<Version>$(PackageVersion)</Version>
 
 	    <PackageProjectUrl>https://github.com/erikjanwestendorp/Our.Umbraco.ContentRelations</PackageProjectUrl>
