--- a/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
+++ b/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
@@ -41,6 +41,8 @@
     <ItemGroup>
       <None Remove="App_Plugins\ContentRelations\backoffice\contentrelationssettings\settings.controller.js" />
       <None Remove="App_Plugins\ContentRelations\backoffice\settings.dashboard.html" />
+      <None Include="readme.md" Pack="true" PackagePath="\"/>
+
     </ItemGroup>
     <!--<ItemGroup>
       <None Remove="App_Plugins\ContentRelations\content.relations.controller.js" />
