--- a/Our.Umbraco.ContentRelations.Site/Our.Umbraco.ContentRelations.Site.csproj
+++ b/Our.Umbraco.ContentRelations.Site/Our.Umbraco.ContentRelations.Site.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
@@ -44,9 +44,14 @@
     </ItemGroup>
     <ItemGroup>
       <None Remove="App_Plugins\ContentRelations\backoffice\contentrelationssettings\settingsdashboard.html" />
+      <None Remove="App_Plugins\ContentRelations\lang\da-DK.xml" />
     </ItemGroup>
     <ItemGroup>
       <Content Include="App_Plugins\ContentRelations\backoffice\contentrelationssettings\settingsdashboard.html">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+      </Content>
+      <Content Include="App_Plugins\ContentRelations\lang\da-DK.xml">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
         <CopyToPublishDirectory>Always</CopyToPublishDirectory>
       </Content>
