Set version to 1.0.2-beta01

--- a/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
+++ b/Our.Umbraco.ContentRelations/Our.Umbraco.ContentRelations.csproj
@@ -14,7 +14,7 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Description>Umbraco ContentRelations offers the possibility to relate different content items to each other. As long as there is an active relation between content items, both items cannot be deleted.</Description>
         
-		<PackageVersion>1.0.1</PackageVersion>
+		<PackageVersion>1.0.2-beta01</PackageVersion>
 		<Version>$(PackageVersion)</Version>
 
 	    <PackageProjectUrl>https://github.com/erikjanwestendorp/Our.Umbraco.ContentRelations</PackageProjectUrl>
